selfhost/tests/neg/assign.ail
// EXPECT: type mismatch: cannot assign i64 to 'x' of type str
mu x := "hi"
x = 5
println(x)
